# MultiThreading

./: .gitignore  CMakeLists.txt  Makefile  MultiThreading_UML.drawio  README.md  README.txt
include/: Task.hpp  TaskSystem.hpp  Thread.hpp  ThreadPool.hpp
src/: main.cpp
